Fixed deals not showing

--- a/app/assets/stylesheets/modules/_isotope.scss
+++ b/app/assets/stylesheets/modules/_isotope.scss
@@ -10,6 +10,7 @@
 #container {
   margin:0px auto;
   max-width:1200px;
+  overflow: visible!important;
   // margin-bottom: 60px;
 }
 
